--- a/src/ui/start.fxml
+++ b/src/ui/start.fxml
@@ -11,7 +11,7 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Button mnemonicParsing="false" text="...to do">
+      <Button mnemonicParsing="false" onAction = "#beginKitchenManagement" text="Gestire i compiti in cucina">
          <font>
             <Font size="15.0" />
          </font>
