--- a/src/ui/kitchen/summarySheet-list.fxml
+++ b/src/ui/kitchen/summarySheet-list.fxml
@@ -1,22 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="362.0" prefWidth="557.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.kitchen.SummarySheetList">
-   <center>
-      <ListView fx:id="summarySheetList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="53.0" prefWidth="557.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" text="Nuovo" />
-            <Button disable="true" mnemonicParsing="false" text="Apri" />
-            <Button disable="true" mnemonicParsing="false" text="Elimina" />
-            <Button onAction="#endButtonPressed" mnemonicParsing="false" text="Fine" />
-         </children>
-      </FlowPane>
-   </bottom>
-</BorderPane>
+<SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.kitchen.SummarySheetList">
+  <items>
+      <BorderPane prefHeight="200.0" prefWidth="200.0">
+         <center>
+            <ListView fx:id="eventList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center>
+         <top>
+            <Label text="Eventi" BorderPane.alignment="CENTER_LEFT">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </top>
+      </BorderPane>
+      <BorderPane prefHeight="362.0" prefWidth="557.0">
+         <center>
+            <ListView fx:id="summarySheetList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center>
+         <bottom>
+            <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="53.0" prefWidth="557.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="newButton" disable="true" mnemonicParsing="false" text="Nuovo foglio riepilogativo" />
+                  <Button fx:id="openButton" disable="true" mnemonicParsing="false" text="Apri foglio riepilogativo" />
+                  <Button fx:id="deleteButton" disable="true" mnemonicParsing="false" text="Elimina foglio riepilogativo" />
+                  <Button mnemonicParsing="false" onAction="#endButtonPressed" text="Fine" />
+               </children>
+            </FlowPane>
+         </bottom>
+         <top>
+            <Label text="Servizi" BorderPane.alignment="CENTER_LEFT">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </top>
+      </BorderPane>
+  </items>
+</SplitPane>
