--- a/src/ui/kitchen/summarySheet-list.fxml
+++ b/src/ui/kitchen/summarySheet-list.fxml
@@ -29,7 +29,7 @@
          <bottom>
             <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="53.0" prefWidth="557.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="newButton" disable="true" mnemonicParsing="false" text="Nuovo foglio riepilogativo" />
+                  <Button fx:id="newButton" onAction="#newButtonPressed" disable="true" mnemonicParsing="false" text="Nuovo foglio riepilogativo" />
                   <Button fx:id="openButton" disable="true" mnemonicParsing="false" text="Apri foglio riepilogativo" />
                   <Button fx:id="deleteButton" disable="true" mnemonicParsing="false" text="Elimina foglio riepilogativo" />
                   <Button mnemonicParsing="false" onAction="#endButtonPressed" text="Fine" />
