--- a/src/ui/kitchen/summarySheet-list.fxml
+++ b/src/ui/kitchen/summarySheet-list.fxml
@@ -30,8 +30,8 @@
             <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="53.0" prefWidth="557.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="newButton" onAction="#newButtonPressed" disable="true" mnemonicParsing="false" text="Nuovo foglio riepilogativo" />
-                  <Button fx:id="openButton" disable="true" mnemonicParsing="false" text="Apri foglio riepilogativo" />
-                  <Button fx:id="deleteButton" disable="true" mnemonicParsing="false" text="Elimina foglio riepilogativo" />
+                  <Button fx:id="openButton" onAction="#openButtonPressed" disable="true" mnemonicParsing="false" text="Apri foglio riepilogativo" />
+                  <Button fx:id="deleteButton" onAction="#deleteButtonPressed" disable="true" mnemonicParsing="false" text="Elimina foglio riepilogativo" />
                   <Button mnemonicParsing="false" onAction="#endButtonPressed" text="Fine" />
                </children>
             </FlowPane>
