--- a/src/ui/kitchen/summarySheet-assignJob.fxml
+++ b/src/ui/kitchen/summarySheet-assignJob.fxml
@@ -32,7 +32,7 @@
       </Label>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
         <buttons>
-          <Button mnemonicParsing="false" text="Assegna" />
+          <Button mnemonicParsing="false" onAction="#assignButtonPressed" text="Assegna" />
             <Button mnemonicParsing="false" onAction="#cancelButtonPressed" text="Annulla" />
         </buttons>
          <padding>
